cmake_minimum_required(VERSION 3.8)

project(EmscriptenSamples)

add_compile_options(-std=c++11)

if(EMSCRIPTEN)
	SET(CMAKE_EXECUTABLE_SUFFIX ".html")
	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --js-library \"${CMAKE_SOURCE_DIR}/mylib.js\"")
endif()
	
MACRO(SETUP_SAMPLE_START EXE_NAME)
	UNSET(SOURCE_FILES)
	UNSET(HEADER_FILES)
	UNSET(RESOURCE_FILES)
	UNSET(EFFECT_FILES)
ENDMACRO(SETUP_SAMPLE_START)

MACRO(SETUP_SAMPLE_END EXE_NAME)
	SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})
	SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})
	SOURCE_GROUP("Resource Files" FILES ${RESOURCE_FILES})
	SOURCE_GROUP("Effect Files" FILES ${EFFECT_FILES})
	
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin/${EXE_NAME})
	
	ADD_EXECUTABLE(${EXE_NAME} ${SOURCE_FILES} ${HEADER_FILES} ${RESOURCE_FILES} ${EFFECT_FILES})

ENDMACRO(SETUP_SAMPLE_END)

SETUP_SAMPLE_START(HelloWorld)
	SET(SOURCE_FILES
		HelloWorld/HelloWorld.cpp
	)
SETUP_SAMPLE_END(HelloWorld)

SETUP_SAMPLE_START(PThreadSample)
	SET(SOURCE_FILES
		PThreadSample/Semaphore.cpp
		PThreadSample/PThreadSample.cpp
		PThreadSample/Thread.cpp
	)
	SET(HEADER_FILES
		PThreadSample/Thread.h
	)
SETUP_SAMPLE_END(PThreadSample)

SETUP_SAMPLE_START(CallJsSample)
	SET(SOURCE_FILES
		CallJsSample/CallJsSample.cpp
	)
SETUP_SAMPLE_END(CallJsSample)

SETUP_SAMPLE_START(SdlSample)
	SET(SOURCE_FILES
		SdlSample/SdlSample.cpp
	)
SETUP_SAMPLE_END(SdlSample)